Details
-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
VMware Player 6.0.3, ROS r65154
Description
This manifests in multiple ways, and doesn't always happen. I think our fastfat (and all other FS drivers) probably need FSCTL_DISMOUNT_VOLUME just like RawFS...
In one instance I get an error message saying "Setup could not create install directories" with this log (full log in setup-format-fat-r65154.log
):
(..\..\drivers\filesystems\fastfat\fsctl.c:869) VfatLockOrUnlockVolume(F5784FC0, 1)
(..\..\drivers\filesystems\fastfat\fsctl.c:913) VfatDismountVolume(F5784FC0)
WARNING: VfatDismountVolume at ..\..\drivers\filesystems\fastfat\fsctl.c:922 is UNIMPLEMENTED!
(..\..\lib\fslib\vfatlib\vfatlib.c:267) Failed to umount volume (Status: 0xc0000002)
(..\..\drivers\filesystems\fastfat\fsctl.c:869) VfatLockOrUnlockVolume(F5784FC0, 0)
(..\..\drivers\filesystems\fastfat\close.c:44) Volume
(..\..\drivers\storage\class\disk\disk.c:1553) STATUS_INVALID_PARAMETER
(..\..\ntoskrnl\cc\copy.c:99) IoPageRead failed, Status c000000d
(..\..\drivers\storage\class\disk\disk.c:1553) STATUS_INVALID_PARAMETER
(..\..\ntoskrnl\cc\copy.c:99) IoPageRead failed, Status c000000d
(..\..\drivers\storage\class\disk\disk.c:1553) STATUS_INVALID_PARAMETER
(..\..\ntoskrnl\cc\copy.c:99) IoPageRead failed, Status c000000d
In another instance CmpLoadHiveThread failed to load the required hives.