[FASTFAT] Implement some kind of volume dismount in FastFAT (ie, implement VfatDismountVolume())

This is not fully perfect situation, but it does most of the job (+ leaking a few things). So far, this is not dramatic as its main use is for 1st stage. This will have to be improved later on.

CORE-8732 #comment Can you retest please?

svn path=/trunk/; revision=65173